# OpenGL-Render-Engine

./: CMakeLists.txt  README.md  build.bat  createSrcGroups.cmake
libs/GLAD/include/glad/: glad.h
libs/GLAD/src/: glad.c
libs/assimp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Assimp.sln  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  revision.h  uninstall.vcxproj  uninstall.vcxproj.filters
libs/assimp/code/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp.vcxproj  assimp.vcxproj.filters  cmake_install.cmake
libs/assimp/code/assimp.dir/Debug/: assimp.res
libs/assimp/contrib/zlib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  zlib.sln  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
libs/assimp/contrib/zlib/Debug/: zlibstaticd.lib
libs/assimp/lib/: assimp-vc142-mtd.exp  assimp-vc142-mtd.lib
libs/assimp/lib/Debug/: assimp-vc142-mtd.exp
libs/assimp/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  unit.vcxproj  unit.vcxproj.filters
libs/assimp/test/headercheck/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
libs/assimp/test/models/PLY/: cube_out.ply
libs/assimp/tools/assimp_cmd/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp_cmd.vcxproj  assimp_cmd.vcxproj.filters  cmake_install.cmake
libs/libuv/: CMakeLists.txt
libs/libuv/include/: uv.h
libs/libuv/src/unix/: darwin.c
libs/libuv/src/win/: process.c
libs/tracy_profiler/: CMakeLists.txt  TracyLua.hpp
libs/tracy_profiler/client/: TracyProfiler.cpp  TracyProfiler.hpp
libs/tracy_profiler/common/: TracyProtocol.hpp  TracyQueue.hpp
libs/tracy_profiler/server/: TracyEvent.hpp  TracySortedVector.hpp  TracyVarArray.hpp  TracyVector.hpp  TracyWorker.hpp
resources/configs/: jsonRW.config
resources/models/nanosuit/: hand.vs  leg.vs
resources/output/: img_withRay.ppm
resources/shaders/: 2D.fs  2D.vs  3D.fs  3D.vs  3DMultiCube.vs  Graphic_SimpleImage.fs  Graphic_SimpleImage.vs  color_cube.fs  color_cube.vs  graphic_3d_cube.fs  graphic_3d_light.fs  graphic_3d_light.vs  graphic_cube.fs  graphic_cube.vs  graphic_model.fs  graphic_model.vs  graphic_texture.fs  graphic_texture.vs  shader1.vs  shader2.fs  simpleTexture.fs  texture.fs  texture.vs
resources/shaders/Blend/: blendTest.vs
resources/shaders/CubeMap/: skybox.fs  skybox.vs
resources/shaders/Default/: 3D_Obj.fs  Model.vs
resources/shaders/DeferredRendering/: GPass.fs  GPass.vs  LightingPass.fs  LightingPass.vs  gBufDebugOutput.fs  gBufDebugOutput.vs
resources/shaders/DepthTest/: depth_output.fs  depth_output.vs
resources/shaders/FrameBuffer/: Default.fs  Depth.fs  Stencil.fs  Stencil.vs
resources/shaders/ShadowMapping/: DepthMap.fs  DepthMap.vs  ModelWithShadow.fs  PCSS.fs  ShadowPass.fs  ShadowPass.vs
resources/shaders/StencilTest/: outline.fs  outline.vs
resources/shaders/nanosuit/: glass.fs  leg.fs
src/: main.cpp  test.cpp  test.h
src/common/: custom_rtti.h  def.h  headers.h
src/component/: Component.cpp  Component.h  MeshRender.cpp  MeshRender.h  SpriteRender.cpp  SpriteRender.h  Transform.cpp  Transform.h  UITransform.cpp  UITransform.h
src/engine/: Engine.cpp  Engine.h
src/entity/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.h
src/graphic/: CubeMap.cpp  CubeMap.h  GlobalShaderParam.cpp  GlobalShaderParam.h  GraphicBase.cpp  GraphicBase.h  GraphicCommonHeader.h  GraphicInclude.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  ShaderSetting.cpp  ShaderSetting.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
src/input/: InputManager.cpp  InputManager.h
src/pipline/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Camera_test.h  Mesh_test.h  Model_test.h  Shader.cpp  Shader.h  basicTypes.cpp  basicTypes.h  bufferUtil.h  window.cpp  window.h
src/render/: Blend.cpp  Blend.h  DepthTest.cpp  DepthTest.h  FaceCulling.cpp  FaceCulling.h  FrameBuffer.cpp  FrameBuffer.h  RenderCommonHeader.h  RenderControllerBase.h  RenderQueue.cpp  RenderQueue.h  ShadowMapping.cpp  ShadowMapping.h  StencilTest.cpp  StencilTest.h
src/render/RenderPath/: DeferredRendering.cpp  DeferredRendering.h  ForwardRendering.cpp  ForwardRendering.h  RenderPathBase.h
src/render/controller/: DepthTest.cpp  FaceCulling.cpp  FrameBuffer.cpp  FrameBuffer.h  PostProcessing.cpp  PostProcessing.h  RayTracing.cpp  RayTracing.h  RayTracing.inl  RenderControllerBase.h  ShadowMapping.cpp  ShadowMapping.h  StencilTest.cpp  StencilTest.h
src/resource/: resourceBasic.cpp  resourceBasic.h  resourceManager.cpp  resourceManager.h
src/resource/types/: AtlasTextureResource.cpp  AtlasTextureResource.h  ShaderResource.cpp  ShaderResource.h  TextureResource.cpp  TextureResource.h
src/scripts/: mainscript.cpp  mainscript.h
src/system/: CustomSystem.cpp  CustomSystem.h  DebugSystem.cpp  DebugSystem.h  Engine.cpp  Engine.h  EntitySystem.cpp  EntitySystem.h  FileWatcherSystem.cpp  FileWatcherSystem.h  InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  ResourceSystem.cpp  ResourceSystem.h  System.cpp  System.h  UISystem.cpp  UISystem.h  WindowSystem.cpp  WindowSystem.h  imgui.ini
src/test/: graphicTest.cpp  graphicTest.h  test.cpp  test.h
src/tools/: fileWatcher.cpp  fileWatcher.h  ioUtil.cpp  ioUtil.h
src/window/: windowReview.h
(+63 files in other folders)
